# jpnorm

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
crates/jpnorm-core/: Cargo.toml
crates/jpnorm-core/benches/: normalize.rs
crates/jpnorm-core/examples/: dump_normalize_cases.rs
crates/jpnorm-core/src/: config.rs  lib.rs  pipeline.rs  test_fixtures.rs
crates/jpnorm-core/src/l1_char/: cjk_compat.rs  cleanup.rs  mod.rs  prolonged.rs  quotes.rs  repeat.rs  spaces.rs  strip.rs  symbols.rs  unicode.rs  width.rs
crates/jpnorm-core/src/l2_script/: kana.rs  mod.rs  numbers.rs  numerals.rs
crates/jpnorm-core/src/l3_lexical/: mod.rs  synonym.rs
crates/jpnorm-core/src/l4_extra/: emoji.rs  mod.rs  protect.rs
crates/jpnorm-core/tests/: compat_neologdn.rs  normalize_many.rs
crates/jpnorm-dict/: Cargo.toml
crates/jpnorm-dict/src/: lib.rs  sudachi.rs
crates/jpnorm-py/: Cargo.toml
crates/jpnorm-py/src/: lib.rs
python/jpnorm/: __init__.py  __init__.pyi  comparison.py
python/jpnorm/lib_native.dylib.dSYM/Contents/Resources/Relocations/aarch64/: lib_native.dylib.yml
scripts/: fetch-sudachi-synonyms.sh  gen-neologdn-golden.py
tests/golden/: neologdn.jsonl
tests/python/: test_comparison.py
