[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "jpnorm"
version = "0.0.4"
description = "みんなの日本語正規化ライブラリ / World-class Japanese text normalization"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
license-files = ["LICENSE-MIT", "LICENSE-APACHE"]
requires-python = ">=3.9"
keywords = ["japanese", "nlp", "normalization", "text"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: Japanese",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Repository = "https://github.com/yoshitakaoyama/jpnorm"

[tool.maturin]
manifest-path = "crates/jpnorm-py/Cargo.toml"
module-name = "jpnorm._native"
python-source = "python"
features = ["pyo3/extension-module"]
