[package]
name = "jpnorm-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
unicode-normalization.workspace = true
daachorse.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "normalize"
harness = false
