[package]
name = "jpnorm-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for jpnorm"

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
jpnorm-core.workspace = true
pyo3.workspace = true
